objects/Meeting_Attendee__c.object
<CustomObject>
    <description>This object is used to manage meeting attendees.</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meeting_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>Meeting_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>MT{00000}</displayFormat>
        <label>Meeting Attendees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_from_changing_Meeting_Attendee</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Attendee__c)</errorConditionFormula>
        <errorDisplayField>Attendee__c</errorDisplayField>
        <errorMessage>Please don&apos;t change the value of this field.</errorMessage>
    </validationRules>
</CustomObject>